# EmbedYAML

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  Emitting.cpp  Parsing.cpp
include/EmbedYAML/: EmbedYAML.hpp  Error.hpp  Node.hpp  YAMLNode.hpp
src/: EmbedYAML.cpp
